<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Session Summary Card -->
        <LinearLayout
            android:id="@+id/summary_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Session Summary -->
            <TextView
                android:id="@+id/textSessionSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/session_summary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/session_expanded_dateTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/textSessionRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dark_green" />

            <!-- Directives Issued -->
            <TextView
                android:id="@+id/textDirectivesIssued"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/directives_issued"
                android:textColor="@color/dark_green" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/analysis_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/summary_card"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/summary_card"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="8dp">
            <TextView
                android:id="@+id/textSessionAnalysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_analysis"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/dark_green"
                android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/textSessionAnalysisMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_margin="8dp"
                    android:textColor="@color/dark_green" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <!-- Chart Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/chart_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/analysis_card"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/summary_card"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textSessionStats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/session_stats"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/dark_green"
                    android:layout_marginBottom="8dp" />

                <com.github.mikephil.charting.charts.RadarChart
                    android:id="@+id/radarChart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:layout_constraintDimensionRatio="1:1" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="4"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <!-- Add your text views for each direction here -->
                    <TextView
                        android:id="@+id/textFront"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textFrontLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textFrontRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textBackLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />

                    <TextView
                        android:id="@+id/textBackRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_green"
                        android:layout_columnWeight="1" />
                </GridLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <!-- Chart Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/images_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chart_card"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/summary_card"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textSessionImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_images"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/dark_green"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textInitialImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/initial_image"
                android:layout_margin="8dp"
                android:textColor="@color/dark_green" />

            <ImageView
                android:id="@+id/initialImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"
            />

            <TextView
                android:id="@+id/textFinalImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/final_image"
                android:layout_margin="8dp"
                android:textColor="@color/dark_green" />

            <ImageView
                android:id="@+id/finalImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"
            />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</ScrollView>